--- a/index.html
+++ b/index.html
@@ -714,7 +714,7 @@
                 <div class="details">
                   <h4 class="my-0 title">
                     <a href="https://mahdihat791.github.io/AI-Mario-Game/"
-                      >AI Mario Game</a
+                      >Dice</a
                     >
                   </h4>
                   <ul class="list-inline meta mb-0 mt-2">
